After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763356 - glimagesink: Fix window memory leak
glimagesink: Fix window memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.7.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-03-09 03:00 UTC by Vineeth
Modified: 2016-03-11 15:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix window memory leak (744 bytes, patch)
2016-03-09 03:00 UTC, Vineeth
committed Details | Review

Description Vineeth 2016-03-09 03:00:25 UTC
GlWindow is being leaked in a particular scenario
Comment 1 Vineeth 2016-03-09 03:00:59 UTC
Created attachment 323465 [details] [review]
fix window memory leak
Comment 2 Sebastian Dröge (slomo) 2016-03-09 06:59:23 UTC
commit 8d88b1a19b9f4ea8ff7a64aa838099dfbec1c8c7
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Wed Mar 9 11:58:43 2016 +0900

    glimagesink: Fix window memory leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=763356