glimagesink: Fix window memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=763356